--- a/spring boot workspace/FirstSpringBootApp/src/main/resources/templates/index.html
+++ b/spring boot workspace/FirstSpringBootApp/src/main/resources/templates/index.html
@@ -6,5 +6,7 @@
 </head>
 <body>
 <h2>Welcome to Spring boot with Thymeleaf as View</h2>
+<a href="about">About Us</a> |
+<a href="contact">Contact Us</a> |
 </body>
 </html>
