--- a/spring boot workspace/FirstSpringBootApp/src/main/resources/templates/index.html
+++ b/spring boot workspace/FirstSpringBootApp/src/main/resources/templates/index.html
@@ -8,5 +8,6 @@
 <h2>Welcome to Spring boot with Thymeleaf as View</h2>
 <a href="about">About Us</a> |
 <a href="contact">Contact Us</a> |
+<a href="login">Login Page</a>
 </body>
 </html>
