--- a/spring boot workspace/spring-boot-with-jpa/spring-boot-with-jpa/src/main/resources/templates/index.html
+++ b/spring boot workspace/spring-boot-with-jpa/spring-boot-with-jpa/src/main/resources/templates/index.html
@@ -17,5 +17,19 @@
 	<input type="submit" value="Store Employee"/>
 	<input type="reset" value="reset"/>
 </form>
+<hr/>
+<h2>Employees Details</h2>
+<table border="1">
+	<tr>
+		<th>EId</th>
+		<th>EName</th>
+		<th>Salary</th>
+	</tr>
+	<tr th:each="e:${listofemployee}">
+		<td th:text="${e.eid}"></td>
+		<td th:text="${e.ename}"></td>
+		<td th:text="${e.salary}"></td>
+	</tr>
+</table>
 </body>
 </html>
