--- a/spring boot workspace/spring-boot-with-jpa/spring-boot-with-jpa/src/main/resources/templates/index.html
+++ b/spring boot workspace/spring-boot-with-jpa/spring-boot-with-jpa/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
 	<input type="text" th:field="*{ename}"><br/>
 	<label>Salary</label>
 	<input type="number" th:field="*{salary}"><br/>
-	<input type="submit" value="Store Employee"/>
+	<input type="submit" th:value="${buttonValue}" name="submitButton"/>
 	<input type="reset" value="reset"/>
 </form>
 <hr/>
@@ -24,11 +24,15 @@
 		<th>EId</th>
 		<th>EName</th>
 		<th>Salary</th>
+		<th>Delete</th>
+		<th>Update</th>
 	</tr>
 	<tr th:each="e:${listofemployee}">
 		<td th:text="${e.eid}"></td>
 		<td th:text="${e.ename}"></td>
 		<td th:text="${e.salary}"></td>
+		<td><a th:href="@{/deleteemployee(eid=${e.eid})}">Delete</a></td>
+		<td><a th:href="@{/updateemployee(eid=${e.eid})}">Update</a></td>
 	</tr>
 </table>
 </body>
