--- a/spring boot workspace/spring-boot-with-data/spring-boot-with-data/src/main/resources/templates/index.html
+++ b/spring boot workspace/spring-boot-with-data/spring-boot-with-data/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-<h2>Employee Management System using Spring boot with Core JPA</h2>
+<h2>Employee Management System using Spring boot with Spring Data</h2>
 <span th:text="${msg}" style="color:red"></span>
 <h2>Add Employee</h2>
 <form th:object="${emp}"  th:action="@{/storeemployee}" method="post">
