--- a/spring boot security workspace/spring-boot-security-with-db/spring-boot-security-with-db/src/main/resources/templates/signup.html
+++ b/spring boot security workspace/spring-boot-security-with-db/spring-boot-security-with-db/src/main/resources/templates/signup.html
@@ -6,5 +6,19 @@
 </head>
 <body>
 <h2>Sign Up Page</h2>
+
+<form action="signup" method="post">
+<label>EmailId</label>
+<input type="email" name="user" /><br/>
+<label>Password</label>
+<input type="password" name="password" /><br/>
+<label>TypeOfUser</label>
+<input type="radio" name="roles" value="USER" />User
+<input type="radio" name="roles" value="USER,ADMIN"/>Admin
+<br/>
+<input type="submit" value="SignUp"/>
+<input type="reset" value="reset"/>
+</form>
+<a href="loginpage">Login Page</a>
 </body>
 </html>
