--- a/spring boot security workspace/spring-boot-security-with-db/spring-boot-security-with-db/src/main/resources/templates/signup.html
+++ b/spring boot security workspace/spring-boot-security-with-db/spring-boot-security-with-db/src/main/resources/templates/signup.html
@@ -9,7 +9,7 @@
 
 <form action="signup" method="post">
 <label>EmailId</label>
-<input type="email" name="user" /><br/>
+<input type="email" name="username" /><br/>
 <label>Password</label>
 <input type="password" name="password" /><br/>
 <label>TypeOfUser</label>
